--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
     "jwt-decode": "^2.2.0",
+    "ngx-scroll-event": "^1.0.8",
     "popper.js": "^1.16.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
